# prism

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  foundry.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  security_best_practices_report.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: codeql.yml  dco.yml  dependency-review.yml  full-validate.yml  scorecard.yml  validate.yml
apps/web/: .env.example  next.config.ts  package.json  proxy.test.ts  proxy.ts  vitest.config.ts
apps/web/app/: docs.css  globals.css  information.css  landing.css  layout.tsx  legal.css  manifest.ts  opengraph-image.tsx  page.tsx  public-footer.css  robots.ts  sitemap.ts
apps/web/app/about/: page.tsx
apps/web/app/api/agent/challenge/: route.ts
apps/web/app/api/agent/proxy/[...path]/: route.ts
apps/web/app/api/agent/session/: route.ts
apps/web/app/api/app/[...path]/: route.ts
apps/web/app/api/auth/session/: route.ts
apps/web/app/api/proof/: route.test.ts  route.ts
apps/web/app/api/wallet/: route.ts
apps/web/app/compute/: page.tsx
apps/web/app/contact/: page.tsx
apps/web/app/docs/: opengraph-image.tsx  page.tsx
apps/web/app/earnings/: page.tsx
apps/web/app/leases/: page.tsx
apps/web/app/nodes/: page.tsx
apps/web/app/operator/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/proof/: opengraph-image.tsx  page.tsx
apps/web/app/security/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/terms/: page.tsx
apps/web/app/wallets/: page.tsx
apps/web/components/: app-shell.tsx  compute-workspace.tsx  dashboard.tsx  developer-docs.tsx  earnings.tsx  hero-signal.tsx  information-page.tsx  landing-page.tsx  lease-table.tsx  legal-page.tsx  node-fleet.tsx  operator-console.tsx  proof-feed.tsx  providers.tsx  public-footer.tsx  settings.tsx  theme-provider.tsx  use-supplier-summary.ts  wallets.tsx
apps/web/lib/: agent-auth.test.ts  agent-auth.ts  chain.test.ts  chain.ts  control-plane.ts  og-image.tsx  operator.test.ts  operator.ts  proof.test.ts  proof.ts  server-auth.test.ts  server-auth.ts  server-origin.test.ts  server-origin.ts  server-rate-limit.test.ts  server-rate-limit.ts  site.ts  supplier.ts  wallet-proxy.test.ts  wallet-proxy.ts
contracts/script/: Deploy.s.sol  DeployLocal.s.sol  RegisterCloudBroker.s.sol
contracts/src/: AdminTimelockV1.sol  LeaseEscrowV1.sol  NodeRegistryV1.sol
contracts/src/interfaces/: IERC20.sol
contracts/src/lib/: TokenTransfers.sol
contracts/test/: LeaseEscrowInvariant.t.sol  LeaseEscrowV1.t.sol
crates/chain/: Cargo.toml
crates/chain/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
deploy/: Dockerfile.rust  Dockerfile.security  Dockerfile.web
deploy/ec2/: Caddyfile  README.md  compose.yml
deploy/lightsail/: .env.example  Caddyfile  README.md  compose.yml
deploy/node/: README.md  node.env.example  prismd-certificate.service  prismd-certificate.timer  prismd-commands.service  prismd-tunnel.service
deploy/observability/: prism-alerts.yml  prometheus.yml
docs/: ARCHITECTURE.md  PROOF_SPEC.md  RELEASE_GATES.md  SECURITY_MODEL.md  chaos-load-security.md  production-audit-full-system.md  repository-hardening.md  security-scanning.md  vast-launch.md
examples/agent-quickstart/: README.md  package.json  quickstart.mjs
examples/pytorch-lightning-on-prism/: README.md  lease-and-train.mjs  package.json  train.py
infra/terraform/: .terraform.lock.hcl  edge.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
mcp/: README.md  package.json  server.mjs
node/prismd/: Cargo.toml
node/prismd/assets/: workspace-bootstrap.sh
node/prismd/src/: main.rs  runtime.rs  tunnel.rs
node/prismd/test-image/: Dockerfile  nvidia-smi
scripts/: check-public-copy.sh  check-secrets.sh  check-ui-patterns.sh  generate-lightsail-tls.sh  lint-automation.sh  load-http.mjs  mock-external-services.mjs  security-scan.sh  test-control-plane-load.sh  test-control-plane-postgres.sh  test-gateway-redis.sh  test-lifecycle-e2e.sh  test-lightsail-compose.sh  test-lightsail-tls.sh  test-monitor-chaos.sh  test-node-systemd.sh  test-observability.sh  test-tunnel-e2e.sh  test-web-runtime.sh  test-workspace-bootstrap.sh  validate-fast.sh  validate.sh  verify-isolation.sh
sdk/: README.md  example.mjs  package.json  prism.mjs
services/access-gateway/: Cargo.toml
services/access-gateway/src/: main.rs  tunnel.rs
services/control-plane/: Cargo.toml
services/control-plane/migrations/: 0001_marketplace.sql  0002_account_controls.sql  0003_leases.sql  0004_node_commands.sql  0005_lifecycle.sql  0006_operations.sql  0007_cloud_broker.sql
services/control-plane/src/: main.rs
services/operations-monitor/: Cargo.toml
services/operations-monitor/src/: main.rs
services/reconciliation-monitor/: Cargo.toml
services/reconciliation-monitor/src/: main.rs
workers/lifecycle-worker/: Cargo.toml
workers/lifecycle-worker/src/: main.rs  vast.rs
workers/proof-worker/: Cargo.toml
workers/proof-worker/src/: main.rs
workers/settlement-worker/: Cargo.toml
workers/settlement-worker/src/: main.rs
x402/: README.md  package.json  server.mjs
