[package]
name = "prism-chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-kms.workspace = true
aws-smithy-http-client-reqwest.workspace = true
hex.workspace = true
k256.workspace = true
reqwest.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
url.workspace = true
