[package]
name = "prism-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
k256.workspace = true
prism-protocol = { path = "../../crates/protocol" }
rand.workspace = true
rcgen.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
