[package]
name = "prism-reconciliation-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
hex.workspace = true
prism-chain = { path = "../../crates/chain" }
prism-protocol = { path = "../../crates/protocol" }
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
