[package]
name = "prism-lifecycle-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
prism-chain = { path = "../../crates/chain" }
prism-protocol = { path = "../../crates/protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
