[package]
name = "prism-settlement-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
k256.workspace = true
prism-chain = { path = "../../crates/chain" }
prism-protocol = { path = "../../crates/protocol" }
rand.workspace = true
reqwest.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
